--- a/okey-desktop/package.json
+++ b/okey-desktop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "okey-desktop",
   "private": true,
-  "version": "0.2.0",
+  "version": "0.2.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-process": "^2.3.0",
     "@tauri-apps/plugin-updater": "^2.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
