Küçük hata düzeltmesi.

--- a/okey-desktop/.env.development
+++ b/okey-desktop/.env.development
@@ -6,5 +6,5 @@ VITE_SOCKET_SERVER_URL=http://localhost:3001
 # Multiplayer özelliğini aktif/pasif yap (backend hazır olduğunda 'true' yap)
 VITE_ENABLE_MULTIPLAYER=false
 
-# Auto-Update kontrolünü development ortamında devre dışı bırak (GitHub API rate limit)
-VITE_ENABLE_AUTO_UPDATE=false
+# Auto-Update kontrolünü development ortamında aktif yap (manuel test için)
+VITE_ENABLE_AUTO_UPDATE=true
